update plugin dependency for Github compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
                         <pushReleases>false</pushReleases>
                         <noDeploy>true</noDeploy>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.jcraft</groupId>
+                            <artifactId>jsch</artifactId>
+                            <version>0.1.55</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
         </plugins>
 
