--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
     <groupId>ca.denniscourneyea.rest-soap-template</groupId>
     <artifactId>parent</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
     <name>${baseArtifactName}-${project.artifactId}</name>
     <description>Web service project template using Spring MVC and WS to support both REST (JSON + XML) and SOAP API's.</description>
