--- a/service/pom.xml
+++ b/service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>ca.denniscourneyea.rest-soap-template</groupId>
         <artifactId>parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     
     <artifactId>service</artifactId>
